testsuite/tests/typecheck/should_fail/T17301.stderr

T17301.hs:22:3: error:
    • Uninferrable type variable in
      type family equation right-hand side ‘'MkATySing
                                              @(B a0) ('SB @a0)’:
        (a0 :: A)
    • In the type family declaration for ‘Forget’
